k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend

spec:

  revisionHistoryLimit: 2

  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:

    metadata:
      labels:
        app: backend

    spec:

      containers:

      - name: backend

        image: 408502716092.dkr.ecr.ap-south-1.amazonaws.com/superkart-backend:v1

        imagePullPolicy: Always

        ports:

        - containerPort: 7860

---

apiVersion: v1
kind: Service

metadata:
  name: backend-service

spec:

  type: ClusterIP

  selector:
    app: backend

  ports:

  - port: 7860

    targetPort: 7860
