k8s/gui.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: gui

spec:
  revisionHistoryLimit: 2
  replicas: 1

  selector:
    matchLabels:
      app: gui

  template:

    metadata:
      labels:
        app: gui

    spec:

      containers:

      - name: gui

        image: 408502716092.dkr.ecr.ap-south-1.amazonaws.com/superkart-gui:v1

        imagePullPolicy: Always

        ports:

        - containerPort: 8501

---

apiVersion: v1
kind: Service

metadata:
  name: gui-service

spec:

  type: ClusterIP

  selector:
    app: gui

  ports:

  - port: 80
    targetPort: 8501
